criei classe para o BOT, tambem uma para registrar o BOT na API do telegram

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=demo
 spring.data.mongodb.uri=mongodb://localhost:27017/furiaChatDB
 server.port=8080
+telegram.bot.username=teste_estagioBot
+telegram.bot.token=7555204341:AAHWfYh0DRhiUATWH2YjMwb-QYcnFn4s3wo
